src/objects/State_User_Report_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account_Segmentation__c</fullName>
        <label>Account Segmentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accounts</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Called_On_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Called On Accounts</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>IF(AND(State__c != null, Account_Segmentation__c != null), LEFT(State__c, 15) + &apos;|&apos; + Account_Segmentation__c + &apos;|&apos; + TEXT(Premise__c),
IF(AND(State__c != null, Primary_Demographic__c != null), LEFT(State__c, 15) + &apos;|&apos; + Primary_Demographic__c + &apos;|&apos; + TEXT(Premise__c),
IF(AND(User__c != null, Account_Segmentation__c != null), LEFT(User__c, 15) + &apos;|&apos; + Account_Segmentation__c + &apos;|&apos; + TEXT(Premise__c),
IF(AND(User__c != null, Primary_Demographic__c != null), LEFT(User__c, 15) + &apos;|&apos; + Primary_Demographic__c + &apos;|&apos; + TEXT(Premise__c),
null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise__c</fullName>
        <label>Premise</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Demographic__c</fullName>
        <label>Primary Demographic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>State User Report Items</relationshipLabel>
        <relationshipName>State_User_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>State_User_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>State User Report Item</label>
    <nameField>
        <displayFormat>SURI-{00000000}</displayFormat>
        <label>State User Report Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State User Report Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>